# hivemind-core

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  EXAMPLES.md  LICENSE  README.md  README.zh-CN.md  SKILL.md  TODOS.md  architecture.html  pyproject.toml
.github/workflows/: admin-reset-tenant-key.yml  build-images.yml  ci.yml  cvm-diagnose.yml  delete-cvm.yml  deploy.yml  hermes-prod-eval.yml  migrate-pg-data.yml  publish-python.yml  reconcile-hash.yml  seed-tinfoil-prices.yml  wipe-prices.yml
agents/base/: Dockerfile  Dockerfile.agent-sdk
agents/debug-claude/: Dockerfile  agent.py
agents/default-common/: _bridge.py
agents/default-index/: agent.py
agents/default-index-hermes/: Dockerfile  agent.py
agents/default-mediator/: Dockerfile  agent.py  mediator-prompt.md
agents/default-mediator-hermes/: agent.py
agents/default-query/: Dockerfile  agent.py  query-prompt.md
agents/default-query-hermes/: agent.py
agents/default-scope/: Dockerfile  _bridge.py  agent.py  scope-prompt.md
agents/default-scope-claw/: Dockerfile  agent.py  build_prep.sh
agents/default-scope-hermes/: agent.py
agents/examples/: README.md
agents/private-default-scope/: Dockerfile  README.md  _bridge.py  agent.py
autoresearch/: CONCLUSIONS.md  LEARNINGS.md  README.md  __init__.py  ablation_analysis.md  findings.md  parallel_ablations.sh  pivot_design.md  program.md  results.tsv  run_experiment.sh  study_wrap_up.md
autoresearch/legacy_bench/: DEPRECATED.md  __init__.py  __main__.py  cli.py  gan.py  judge.py  loader.py  red_team.py  report.py  scenarios_real.json
bench/: DEPRECATED.md  __init__.py  __main__.py  cli.py  gan.py  judge.py  loader.py  red_team.py  report.py  runner.py  scenarios.py
bench/sources/: README.md  adapter.py
deploy/: .env.example  Dockerfile  boot.sh  docker-compose.dev.yml  docker-compose.yaml  kms.py  restore.sh
deploy/contracts/: NotarizedAppAuth.sol  foundry.toml
deploy/ec2/: README.md
deploy/monitor/: Dockerfile  monitor.py  (+1 more)
docs/: async-query-pipeline.md  conditional-recall.md  database-guide.md  harness-requirements.md  remote-db-guide.md  room-cookbook.md  security-audit-2026-04.md
eval/: README.md  __init__.py  cli.py  graders.py  scenarios.py  types.py
examples/: indexing_agent.py  sample_agent.py  scoping_agent.py
hivemind/: __init__.py  _pg_roles.py  admin_proxy.py  agent_base_bootstrap.py  agent_seal.py  attestation.py  cli.py  compose_pin.py  config.py  core.py  db.py  dcap.py  enclave.py  indexing.py  mcp_stdio_proxy.py  models.py  onchain.py  pipeline.py  prompts.py  reproduce.py  room_vault.py  rooms.py  run_signer.py  s3.py  scope.py  seal.py  server.py  storage.py  tenant_billing.py  tenant_seal.py  tenant_signing.py  tenants.py  tls.py  tools.py  trust.py  ui.html  version.py
scripts/: admin_reset_tenant_key.py  eval-scope.sh  migrate-legacy-hivemind.sh  migrate_pg.py  quickstart.sh  smoke_capability_tokens.py  smoke_multi_tenant.py
tests/: INTEGRATION_TESTS.md  conftest.py  test_admin_runs.py  test_agent_attest.py  test_agent_base_bootstrap.py  test_agent_loop.py  test_agent_store_seal.py  test_anthropic_bridge.py  test_api.py  test_artifact_upload.py  test_ask_verifies_attestation.py  test_attestation.py  test_attestation_startup.py  test_budget_defaults.py  test_capability_tokens.py  test_cli_compose.py  test_cli_share.py  test_cli_submit_retry.py  test_cli_trust.py  test_compose_pin.py  test_compose_pin_registry.py  test_core_store.py  test_deploy_defaults.py  test_docker_runner.py  test_eval_cli.py  test_hermes_agent_fast_paths.py  test_hermes_agent_general_contract.py  test_hermes_artifact_tool.py  test_inspection_inheritance_and_audit.py  test_integration_docker.py  test_pg_roles.py  test_pipeline.py  test_pipeline_signs_runs.py  test_query_agent_upload_gate.py  test_reproduce.py  test_room_defaults.py  test_room_share_links_api.py  test_rooms.py  test_run_signer.py  test_sandbox_agents.py  (+15 more)
watch/: dashboard.py
(+95 files in other folders)
