[project]
name = "hivemind-core"
version = "0.1.0"
description = "Knowledge enclave with recall constraints"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=41.0",
    "python-multipart>=0.0.22",
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["hivemind"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
