[project]
name = "hivemind-core"
version = "0.3.3"
description = "Attested recall agreements for mutually distrusting parties and their agents"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "openai>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.26",
    "docker>=7.0",
    "psycopg[binary]>=3.1",
    "sqlglot>=25.0",
    "click>=8.0",
    "httpx>=0.24",
    "pyyaml>=6.0",
    "dstack-sdk>=0.5.0",
    "cryptography>=42.0",
    "dcap-qvl>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "ruff>=0.6",
]

[project.scripts]
hivemind = "hivemind.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["hivemind"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
filterwarnings = [
    # Starlette TestClient deprecation noise from third-party — not actionable.
    "ignore::DeprecationWarning:starlette.testclient",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Real-bug-class only for the gating pass: pyflakes (F) + a narrow slice of
# pycodestyle (E9 syntax). Style rules (I import sort, B bugbear, UP modern-
# python idioms) belong in a dedicated cleanup pass — bundling them with
# behavioral fixes makes diffs unreadable. Run `ruff check --select=I,B,UP
# --fix` separately when you want that cleanup.
#
# Curated bandit (S) rules: just the ones that catch genuinely dangerous
# constructs in security-critical code. The full S set is ~1k+ violations
# (mostly S101 ``assert`` in tests + S106/S108 fixture noise) and would
# drown the gate. The intentional ``exec`` calls in scope.py compile and
# run AST-validated user scope_fn source inside a restricted namespace —
# they carry explicit ``# noqa: S102`` markers so accidental new
# exec/eval/pickle uses stay visible.
#   S102 — exec
#   S307 — eval
#   S301/S302 — pickle / cPickle deserialization
#   S324 — insecure hash (md5/sha1) used in a security context
#   S612 — logging.config.listen() without verify
select = ["F", "E9", "S102", "S301", "S302", "S307", "S324", "S612"]
ignore = [
    # F841 in tests is sometimes intentional (capturing kwargs for assertions
    # against side effects). Lift the rule on tests to avoid noise.
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]
